grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.use_declaration,
        $.mod_declaration,
        $.function_definition,
        $.struct_declaration,
        $.enum_declaration,
        $.ability_declaration,
        $.const_declaration,
      ),

    // mod foo
    // mod Foo
    // mod foo { ... }
    // pub mod foo
    _outer_path_keyword: ($) => choice($.keyword_pkg, $.keyword_super),

    // struct User { name: String, age: Nat }
    // struct Box(a) { value: a }
    // pub struct Point { x: Int, y: Int }
    struct_declaration: ($) =>
      seq(
        optional($.visibility_marker),
        $.keyword_struct,
        field("name", $.type_identifier),
        optional(field("type_params", $.type_parameters)),
        field("body", $.struct_body),
      ),

    type_parameters: ($) =>
      seq(
        "(",
        $.identifier,
        repeat(seq(",", $.identifier)),
        optional(","),
        ")",
      ),

    struct_body: ($) => seq("{", optional($.struct_fields), "}"),

    // Field separator: comma or newline (Go/Swift style)
    // NEWLINE is only emitted by scanner when followed by identifier (lookahead)
    _field_separator: ($) => choice(",", $._newline),

    struct_fields: ($) =>
      seq(
        $.struct_field,
        repeat(seq($._field_separator, $.struct_field)),
        optional(","),
      ),

    struct_field: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    // Type reference
    // Can be: String (type_path), a (type_variable), List(a) (generic_type),
    // fn(Int, Int) -> Int (function_type), #(Int, String) (tuple_type)
    _type: ($) =>
      choice(
        $.type_path,
        $.type_variable,
        $.generic_type,
        $.function_type,
        $.tuple_type,
      ),

    // Tuple type: #(Int, String), #(a, b, c)
    type_variable: ($) => $.identifier,

    // Generic type like List(a) or Option(String)
    generic_type: ($) =>
      prec(
        1,
        seq(
          $.type_path,
          "(",
          $._type,
          repeat(seq(",", $._type)),
          optional(","),
          ")",
        ),
      ),

    // Type names start with uppercase: User, String, List
    // Using RustRegex for future Unicode extensibility
    type_identifier: ($) => re`[A-Z][a-zA-Z0-9_]*`,

    // enum Option(a) { None, Some(a) }
    // enum Result(a, e) { Ok { value: a }, Err { error: e } }
    // pub enum Status { Active, Inactive }
    enum_declaration: ($) =>
      seq(
        optional($.visibility_marker),
        $.keyword_enum,
        field("name", $.type_identifier),
        optional(field("type_params", $.type_parameters)),
        field("body", $.enum_body),
      ),

    enum_body: ($) => seq("{", optional($.enum_variants), "}"),

    enum_variants: ($) =>
      seq(
        $.enum_variant,
        repeat(seq($._field_separator, $.enum_variant)),
        optional(","),
      ),

    // Variant: None, Some(a), Ok { value: a }
    enum_variant: ($) =>
      seq(
        field("name", $.type_identifier),
        optional(field("fields", $.variant_fields)),
      ),

    // Variant fields: tuple (a, b) or struct { name: Type }
    variant_fields: ($) => choice($.tuple_fields, $.struct_fields_block),

    // Tuple variant fields: (Int, String)
    tuple_fields: ($) =>
      seq("(", $._type, repeat(seq(",", $._type)), optional(","), ")"),

    // Struct variant fields: { name: Type, ... }
    struct_fields_block: ($) => seq("{", optional($.struct_fields), "}"),

    // ability Console {
    //     fn print(msg: String) -> Nil
    //     fn read() -> String
    // }
    // ability State(s) {
    //     op get() -> s
    //     op set(value: s) -> Nil
    // }
    // ability Fail {
    //     op fail(msg: Text) -> Never
    // }
    // pub ability Http { ... }
    const_declaration: ($) =>
      seq(
        optional($.visibility_marker),
        $.keyword_const,
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    // fn add(x, y) { x + y }
    // fn add(x: Int, y: Int) -> Int { x + y }
    // fn add(x: a, y) -> a { x }  -- mixed typed/untyped
    // extern fn len(bytes: Bytes) -> Int  -- external implementation
    // pub extern "wasm" fn len(bytes: Bytes) -> Int  -- with ABI
    function_definition: ($) =>
      choice($.extern_function, $.regular_function),

    // extern fn: no body allowed
    regular_function: ($) =>
      seq(
        optional($.visibility_marker),
        ...functionSignature($),
        field("body", $.block),
      ),

    // extern or extern "abi"
    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
      ),

    // Parameter list (requires at least one, can mix typed/untyped)
    parameter_list: ($) =>
      seq($.parameter, repeat(seq(",", $.parameter)), optional(",")),

    block: ($) =>
      seq("{", repeat(choice($.let_statement, $.expression_statement)), "}"),

    let_statement: ($) =>
      seq(
        $.keyword_let,
        field("pattern", $.pattern),
        "=",
        field("value", $._expression),
      ),

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.lambda_expression,
        $.constructor_expression,
        $.call_expression,
        $.resume_expression,
        $.method_call_expression,
        $.case_expression,
        $.handle_expression,
        $.record_expression,
        $.primary_expression,
      ),

    // resume value — only valid inside op handler arms
    binary_expression: ($) => {
      const binop = (precedence, op) =>
        prec.left(
          precedence,
          seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ),
        );
      return choice(
        // Precedence (higher number = binds tighter)
        // 5: * / %
        binop(5, "*"),
        binop(5, "/"),
        binop(5, "%"),
        // 4: + - <>
        binop(4, "+"),
        binop(4, "-"),
        binop(4, "<>"),
        // 3: == != < > <= >=
        binop(3, "=="),
        binop(3, "!="),
        binop(3, "<"),
        binop(3, ">"),
        binop(3, "<="),
        binop(3, ">="),
        // 2: &&
        binop(2, "&&"),
        // 1: ||
        binop(1, "||"),
        // Qualified operators: a Int::+ b, xs List::<> ys
        binop(5, $.qualified_operator),
      );
    },

    call_expression: ($) =>
      prec(
        10,
        seq(
          field("function", $.value_path),
          "(",
          optional($.argument_list),
          ")",
        ),
      ),

    method_call_expression: ($) =>
      choice(
        // With arguments - higher priority to prefer this over no-args form
        prec.left(
          11,
          seq(
            field("receiver", $._expression),
            ".",
            field("method", $.value_path),
            "(",
            optional($.argument_list),
            ")",
          ),
        ),
        // Without arguments (getter style)
        prec.left(
          10,
          seq(
            field("receiver", $._expression),
            ".",
            field("method", $.value_path),
          ),
        ),
      ),

    case_expression: ($) =>
      seq(
        $.keyword_case,
        field("value", $._expression),
        "{",
        optional(
          seq(
            $.case_arm,
            repeat(seq($._field_separator, $.case_arm)),
            optional($._field_separator),
          ),
        ),
        "}",
      ),

    case_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        choice(
          seq("->", field("value", $._expression)), // no guard
          seq(
            $.guarded_branch,
            repeat(seq($._newline, $.guarded_branch)),
          ), // with guards
        ),
      ),

    pattern: ($) => choice($.simple_pattern, $.as_pattern),

    // Simple patterns (can be used in as_pattern without recursion)
    simple_pattern: ($) =>
      choice(
        $.literal_pattern,
        $.wildcard_pattern,
        $.constructor_pattern,
        $.tuple_pattern,
        $.list_pattern,
        $.identifier_pattern,
      ),

    literal_pattern: ($) =>
      choice(
        $.number_literal,
        $.string,
        $.raw_string,
        $.raw_interpolated_string,
        $.bytes_string,
        $.raw_bytes,
        $.raw_interpolated_bytes,
        $.rune,
        $.keyword_true,
        $.keyword_false,
        $.keyword_nil,
      ),

    wildcard_pattern: ($) => "_",

    // Constructor pattern: None, Some(x), Pair(a, b), Ok { value: x }
    identifier_pattern: ($) => $.identifier,

    // List pattern: [], [a, b, c], [head, ..tail], [first, ..]
    argument_list: ($) => seq($._expression, repeat(seq(",", $._expression))),

    primary_expression: ($) =>
      choice(
        $.keyword_true,
        $.keyword_false,
        $.keyword_nil,
        $.number_literal,
        $.string,
        $.raw_string,
        $.raw_interpolated_string,
        $.multiline_string,
        $.bytes_string,
        $.raw_bytes,
        $.raw_interpolated_bytes,
        $.multiline_bytes,
        $.rune,
        $.value_path,
        $.list_expression,
        $.tuple_expression,
        $.operator_fn,
        $.block, // { expr } for grouping
      ),

    // All binary operators
    value_path: ($) =>
      choice(
        $.identifier,
        prec.right(
          11,
          seq(
            choice(alias($._name, $.path_segment), $.path_keyword),
            repeat(seq("::", alias($._name, $.path_segment))),
            "::",
            $.identifier,
          ),
        ),
      ),

    // A path whose final segment is a type or constructor name.
    // Used where the syntactic role distinguishes constructors/types from
    // ordinary function paths: std::io::Error::EndOfFile, pkg::model::User.
    type_path: ($) =>
      choice(
        $.type_identifier,
        prec.right(
          11,
          seq(
            choice(alias($._name, $.path_segment), $.path_keyword),
            repeat(seq("::", alias($._name, $.path_segment))),
            "::",
            $.type_identifier,
          ),
        ),
      ),

    // [1, 2, 3]
    number_literal: ($) =>
      seq(
        token(
          choice(
            seq(optional(/[+-]/), choice(...NUMBER_MAGNITUDES)),
            re`[+-]?[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9_]*)?`,
          ),
        ),
        optional($.number_suffix),
      ),

    // Rune literal: ?a, ?\n, ?\t, ?\x41, ?\u{41}
    // Matches: ? followed by either:
    //   - A single printable character (not backslash or whitespace)
    //   - An escape sequence: \n, \r, \t, \0, \\, \xHH, \u{H...} (1-6 hex digits)
    string: ($) =>
      seq(
        choice('"', 's"'),
        $.string_segment,
        optional(repeat1(seq($.interpolation, $.string_segment))),
        '"',
      ),

    string_segment: ($) =>
      prec(-1, re`([^"\\]|\\[nrt0"\\]|\\x[0-7][0-9a-fA-F]|\\u\{[0-9a-fA-F]{1,6}\})*`),

    identifier: ($) => re`[a-z_][a-zA-Z0-9_]*|r#[a-z_][a-zA-Z0-9_]*`,

    // Name can be either identifier or type_identifier (used in paths, modules)
    _name: ($) => choice($.identifier, $.type_identifier),

    // Keywords
    keyword_fn: ($) => token(prec(2, "fn")),
    keyword_let: ($) => "let",
    keyword_case: ($) => "case",
    keyword_struct: ($) => "struct",
    keyword_enum: ($) => "enum",
    keyword_const: ($) => "const",
    keyword_pub: ($) => "pub",
    visibility_marker: ($) =>
      seq(
        $.keyword_pub,
        optional(seq("(", $._outer_path_keyword, ")")),
      ),
    keyword_true: ($) => token(prec(1, "True")),
    keyword_false: ($) => token(prec(1, "False")),
    keyword_nil: ($) => token(prec(1, "Nil")),

    // Comments
    // Line doc comment: /// ... (higher precedence to match before line_comment)
    line_comment: ($) => token(prec(1, seq("//", re`.*`))),

    // block_comment and block_doc_comment are handled by external scanner
    // for proper nesting support: /* ... /* nested */ ... */
  },
