test/corpus/basic.txt
================================================================================
Simple function definition
================================================================================

fn main() {
    print_line("Hello, world!")
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (call_expression
            function: (value_path
              (identifier))
            (argument_list
              (primary_expression
                (string
                  (string_segment))))))))))
================================================================================
Function with arithmetic expression
================================================================================

fn test() {
    1 + 2
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (binary_expression
            left: (primary_expression
              (number_literal))
            right: (primary_expression
              (number_literal))))))))

================================================================================
Function with string call
================================================================================

fn test() {
    print_line("He said \"Hello\" to me")
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (call_expression
            function: (value_path
              (identifier))
            (argument_list
              (primary_expression
                (string
                  (string_segment))))))))))

================================================================================
Function with parameters
================================================================================

fn add(a, b) {
    a + b
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      params: (parameter_list
        (parameter
          name: (identifier))
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (binary_expression
            left: (primary_expression
              (value_path
                (identifier)))
            right: (primary_expression
              (value_path
                (identifier)))))))))

================================================================================
Let statement with expression
================================================================================

fn test() {
    let result = add(5, 3)
    result
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (let_statement
          (keyword_let)
          pattern: (pattern
            (simple_pattern
              (identifier_pattern
                (identifier))))
          value: (call_expression
            function: (value_path
              (identifier))
            (argument_list
              (primary_expression
                (number_literal))
              (primary_expression
                (number_literal)))))
        (expression_statement
          (primary_expression
            (value_path
              (identifier))))))))

================================================================================
Operator precedence
================================================================================

fn test() {
    3 + 4 * 5
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (binary_expression
            left: (primary_expression
              (number_literal))
            right: (binary_expression
              left: (primary_expression
                (number_literal))
              right: (primary_expression
                (number_literal)))))))))

================================================================================
Nested function calls
================================================================================

fn test() {
    print_line(add(multiply(2, 3), 4))
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (call_expression
            function: (value_path
              (identifier))
            (argument_list
              (call_expression
                function: (value_path
                  (identifier))
                (argument_list
                  (call_expression
                    function: (value_path
                      (identifier))
                    (argument_list
                      (primary_expression
                        (number_literal))
                      (primary_expression
                        (number_literal))))
                  (primary_expression
                    (number_literal)))))))))))

================================================================================
Comments
================================================================================

// Line comment
fn test() {
    let x = 42  // End of line comment
    x
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (let_statement
          (keyword_let)
          pattern: (pattern
            (simple_pattern
              (identifier_pattern
                (identifier))))
          value: (primary_expression
            (number_literal)))
        (line_comment)
        (expression_statement
          (primary_expression
            (value_path
              (identifier))))))))

================================================================================
Multiple statements in block
================================================================================

fn test() {
    let x = 10
    let y = 20
    let sum = x + y
    print_line(sum)
    sum
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (let_statement
          (keyword_let)
          pattern: (pattern
            (simple_pattern
              (identifier_pattern
                (identifier))))
          value: (primary_expression
            (number_literal)))
        (let_statement
          (keyword_let)
          pattern: (pattern
            (simple_pattern
              (identifier_pattern
                (identifier))))
          value: (primary_expression
            (number_literal)))
        (let_statement
          (keyword_let)
          pattern: (pattern
            (simple_pattern
              (identifier_pattern
                (identifier))))
          value: (binary_expression
            left: (primary_expression
              (value_path
                (identifier)))
            right: (primary_expression
              (value_path
                (identifier)))))
        (expression_statement
          (call_expression
            function: (value_path
              (identifier))
            (argument_list
              (primary_expression
                (value_path
                  (identifier))))))
        (expression_statement
          (primary_expression
            (value_path
              (identifier))))))))

================================================================================
Case expression with literal patterns
================================================================================

fn test_number(n) {
    case n {
        0 -> "zero",
        1 -> "one",
        2 -> "two",
        _ -> "other"
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      params: (parameter_list
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (case_expression
            (keyword_case)
            value: (primary_expression
              (value_path
                (identifier)))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (literal_pattern
                    (number_literal))))
              value: (primary_expression
                (string
                  (string_segment))))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (literal_pattern
                    (number_literal))))
              value: (primary_expression
                (string
                  (string_segment))))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (literal_pattern
                    (number_literal))))
              value: (primary_expression
                (string
                  (string_segment))))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (wildcard_pattern)))
              value: (primary_expression
                (string
                  (string_segment))))))))))

================================================================================
UFCS method call with arguments
================================================================================

fn test() {
    list.map(fn_double)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (method_call_expression
            receiver: (primary_expression
              (value_path
                (identifier)))
            method: (value_path
              (identifier))
            (argument_list
              (primary_expression
                (value_path
                  (identifier))))))))))

================================================================================
UFCS method call without arguments
================================================================================

fn test() {
    list.len
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (method_call_expression
            receiver: (primary_expression
              (value_path
                (identifier)))
            method: (value_path
              (identifier))))))))

================================================================================
Chained UFCS method calls
================================================================================

fn test() {
    data.filter(is_valid).map(double).sum
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (method_call_expression
            receiver: (method_call_expression
              receiver: (method_call_expression
                receiver: (primary_expression
                  (value_path
                    (identifier)))
                method: (value_path
                  (identifier))
                (argument_list
                  (primary_expression
                    (value_path
                      (identifier)))))
              method: (value_path
                (identifier))
              (argument_list
                (primary_expression
                  (value_path
                    (identifier)))))
            method: (value_path
              (identifier))))))))

================================================================================
Qualified UFCS method call
================================================================================

fn test() {
    21.math::double()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (method_call_expression
            receiver: (primary_expression
              (number_literal))
            method: (value_path
              (path_segment
                (identifier))
              (identifier))))))))

================================================================================
Simple struct declaration
================================================================================

struct User {
    name: String,
    age: Nat
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (keyword_struct)
    name: (type_identifier)
    body: (struct_body
      (struct_fields
        (struct_field
          name: (identifier)
          type: (type_path
            (type_identifier)))
        (struct_field
          name: (identifier)
          type: (type_path
            (type_identifier)))))))

================================================================================
Generic struct declaration
================================================================================

struct Box(a) {
    value: a
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (keyword_struct)
    name: (type_identifier)
    type_params: (type_parameters
      (identifier))
    body: (struct_body
      (struct_fields
        (struct_field
          name: (identifier)
          type: (type_variable
            (identifier)))))))

================================================================================
Pub struct with generic type field
================================================================================

pub struct Container(a) {
    items: List(a)
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (visibility_marker
      (keyword_pub))
    (keyword_struct)
    name: (type_identifier)
    type_params: (type_parameters
      (identifier))
    body: (struct_body
      (struct_fields
        (struct_field
          name: (identifier)
          type: (generic_type
            (type_path
              (type_identifier))
            (type_variable
              (identifier))))))))

================================================================================
Simple enum declaration
================================================================================

enum Status {
    Active,
    Inactive
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (keyword_enum)
    name: (type_identifier)
    body: (enum_body
      (enum_variants
        (enum_variant
          name: (type_identifier))
        (enum_variant
          name: (type_identifier))))))

================================================================================
Generic enum with tuple variant
================================================================================

enum Option(a) {
    None,
    Some(a)
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (keyword_enum)
    name: (type_identifier)
    type_params: (type_parameters
      (identifier))
    body: (enum_body
      (enum_variants
        (enum_variant
          name: (type_identifier))
        (enum_variant
          name: (type_identifier)
          fields: (variant_fields
            (tuple_fields
              (type_variable
                (identifier)))))))))

================================================================================
Enum with struct variant fields
================================================================================

enum Result(a, e) {
    Ok { value: a },
    Err { error: e }
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (keyword_enum)
    name: (type_identifier)
    type_params: (type_parameters
      (identifier)
      (identifier))
    body: (enum_body
      (enum_variants
        (enum_variant
          name: (type_identifier)
          fields: (variant_fields
            (struct_fields_block
              (struct_fields
                (struct_field
                  name: (identifier)
                  type: (type_variable
                    (identifier)))))))
        (enum_variant
          name: (type_identifier)
          fields: (variant_fields
            (struct_fields_block
              (struct_fields
                (struct_field
                  name: (identifier)
                  type: (type_variable
                    (identifier)))))))))))

================================================================================
Simple const declaration
================================================================================

const max_size = 1000

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (keyword_const)
    name: (identifier)
    value: (primary_expression
      (number_literal))))

================================================================================
Const with type annotation
================================================================================

const pi: Float = 3.14159

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (keyword_const)
    name: (identifier)
    type: (type_path
      (type_identifier))
    value: (primary_expression
      (number_literal))))

================================================================================
Pub const with string value
================================================================================

pub const version = "0.1.0"

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (visibility_marker
      (keyword_pub))
    (keyword_const)
    name: (identifier)
    value: (primary_expression
      (string
        (string_segment)))))

================================================================================
True literal
================================================================================

fn test() {
    True
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (keyword_true)))))))

================================================================================
False literal
================================================================================

fn test() {
    False
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (keyword_false)))))))

================================================================================
Nil literal
================================================================================

fn test() {
    Nil
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (keyword_nil)))))))

================================================================================
Case expression with True/False patterns
================================================================================

fn test(b) {
    case b {
        True -> "yes",
        False -> "no"
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      params: (parameter_list
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (case_expression
            (keyword_case)
            value: (primary_expression
              (value_path
                (identifier)))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (literal_pattern
                    (keyword_true))))
              value: (primary_expression
                (string
                  (string_segment))))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (literal_pattern
                    (keyword_false))))
              value: (primary_expression
                (string
                  (string_segment))))))))))

================================================================================
Case expression with Nil pattern
================================================================================

fn test(x) {
    case x {
        Nil -> "nothing",
        _ -> "something"
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      params: (parameter_list
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (case_expression
            (keyword_case)
            value: (primary_expression
              (value_path
                (identifier)))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (literal_pattern
                    (keyword_nil))))
              value: (primary_expression
                (string
                  (string_segment))))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (wildcard_pattern)))
              value: (primary_expression
                (string
                  (string_segment))))))))))

================================================================================
Value path with identifier
================================================================================

fn test() {
    std::io::print
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (value_path
              (path_segment
                (identifier))
              (path_segment
                (identifier))
              (identifier))))))))

================================================================================
Value path with type namespace
================================================================================

fn test() {
    Int::to_string(42)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (call_expression
            function: (value_path
              (path_segment
                (type_identifier))
              (identifier))
            (argument_list
              (primary_expression
                (number_literal)))))))))

================================================================================
Case with single guard
================================================================================

fn test(n) {
    case n {
        x && x > 0 -> "positive",
        _ -> "non-positive"
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      params: (parameter_list
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (case_expression
            (keyword_case)
            value: (primary_expression
              (value_path
                (identifier)))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (identifier_pattern
                    (identifier))))
              guard: (binary_expression
                left: (primary_expression
                  (value_path
                    (identifier)))
                right: (primary_expression
                  (number_literal)))
              value: (primary_expression
                (string
                  (string_segment))))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (wildcard_pattern)))
              value: (primary_expression
                (string
                  (string_segment))))))))))

================================================================================
Case with chained guard
================================================================================

fn test(n) {
    case n {
        x && x > 0 && x < 10 -> "small",
        _ -> "other"
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      params: (parameter_list
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (case_expression
            (keyword_case)
            value: (primary_expression
              (value_path
                (identifier)))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (identifier_pattern
                    (identifier))))
              guard: (binary_expression
                left: (binary_expression
                  left: (primary_expression
                    (value_path
                      (identifier)))
                  right: (primary_expression
                    (number_literal)))
                right: (binary_expression
                  left: (primary_expression
                    (value_path
                      (identifier)))
                  right: (primary_expression
                    (number_literal))))
              value: (primary_expression
                (string
                  (string_segment))))
            (case_arm
              pattern: (pattern
                (simple_pattern
                  (wildcard_pattern)))
              value: (primary_expression
                (string
                  (string_segment))))))))))

================================================================================
If is an ordinary identifier
================================================================================

fn test(if) {
    if
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      params: (parameter_list
        (parameter
          name: (identifier)))
      body: (block
        (expression_statement
          (primary_expression
            (value_path
              (identifier))))))))
